[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "wheel",
]

[project]
name = "scrapli_netconf"
description = "Fast, flexible, sync/async, Python 3.7+ NETCONF client built on scrapli"
readme = "README.md"
keywords = [
  "arista",
  "automation",
  "cisco",
  "eos",
  "iosxe",
  "iosxr",
  "juniper",
  "junos",
  "netconf",
  "network",
  "nxos",
  "ssh",
  "telnet",
]
license = { file = "LICENSE" }
authors = [
    { name = "Carl Montanari", email = "carl.r.montanari@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
  "dependencies",
  "optional-dependencies",
  "version",
]
[project.urls]
Changelog = "https://scrapli.github.io/scrapli_netconf/changelog/"
Docs = "https://scrapli.github.io/scrapli_netconf/"
Homepage = "https://github.com/scrapli/scrapli_netconf"

[tool.setuptools.dynamic]
version = { attr = "scrapli_netconf.__version__" }
dependencies = { file = "requirements.txt" }
# dev-darwin is same as dev but excludes ssh2-python
optional-dependencies.dev-darwin = { file = [
    "requirements-dev.txt",
    "requirements-textfsm.txt",
    "requirements-genie.txt",
    "requirements-ttp.txt",
    "requirements-paramiko.txt",
    "requirements-asyncssh.txt",
    "requirements-community.txt",
] }
optional-dependencies.dev = { file = [
    "requirements-dev.txt",
    "requirements-paramiko.txt",
    "requirements-ssh2.txt",
    "requirements-asyncssh.txt",
] }
optional-dependencies.docs = { file = "requirements-docs.txt" }
optional-dependencies.paramiko = { file = "requirements-paramiko.txt" }
optional-dependencies.ssh2 = { file = "requirements-ssh2.txt" }
optional-dependencies.asyncssh = { file = "requirements-asyncssh.txt" }

[tool.setuptools.package-data]
scrapli_netconf = [
    "py.typed"
]

[tool.black]
line-length = 100
target-version = [
    "py311",
    "py313",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
known_first_party = "scrapli"
known_third_party = "asyncssh,lxml,pytest"
[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "scrapli_netconf/"
]

[tool.coverage.report]
sort = "cover"

[tool.mypy]
python_version = "3.10"
pretty = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true


[tool.pydocstyle]
match-dir = "^scrapli_netconf/*"
ignore = "D101,D202,D203,D212,D400,D406,D407,D408,D409,D415"
# D101: missing docstring in public class
# D202: No blank lines allowed after function docstring
# D203: 1 blank line required before class docstring
# D212: Multi-line docstring summary should start at the first line
# D400: First line should end with a period
# D406: Section name should end with a newline
# D407: Missing dashed underline after section
# D408: Section underline should be in the line following the sections name
# D409: Section underline should match the length of its name
# D415: first line should end with a period, question mark, or exclamation point
